<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/pref_1">

        <Preference
            android:title="@string/pref_editTasks"
            android:icon="@drawable/playlist_check"
            android:summary="@string/pref_editTasks_summary"
            android:key="edit_tasks" />

        <Preference
            android:title="@string/pref_editComments"
            android:icon="@drawable/comment_text_outline"
            android:summary="@string/pref_editComments_summary"
            android:key="edit_comments" />

        <Preference
            android:title="@string/pref_backup"
            android:icon="@drawable/backup_restore"
            android:summary="@string/pref_backup_summary"
            android:key="backup" />

        <Preference
            android:title="@string/pref_delete"
            android:icon="@drawable/delete"
            android:summary="@string/pref_delete_summary"
            android:key="delete" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_2">

        <Preference
            android:title="@string/pref_shortcut"
            android:icon="@drawable/arrow_top_right"
            android:summary="@string/pref_shortcut_summary"
            android:key="shortcut" />

        <Preference
            android:title="@string/pref_openSettings"
            android:icon="@drawable/settings"
            android:summary="@string/pref_openSettings_summary"
            android:key="settings" />

        <Preference
            android:title="@string/pref_license"
            android:icon="@drawable/information_outline"
            android:summary="@string/pref_license_summary"
            android:key="about" />

    </PreferenceCategory>


</PreferenceScreen>