<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="ContentDescription"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:gravity="center">

            <RelativeLayout
                android:id="@+id/layout_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_toStartOf="@+id/spinner_tasks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/et_task"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toStartOf="@+id/imageButton_task"
                        android:hint="@string/entry_hintTask"
                        android:inputType="textCapSentences"
                        android:lines="1" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_tasks"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />


            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_com"
                android:layout_below="@+id/layout_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/spinner_comments"
                    app:passwordToggleEnabled="false">

                    <EditText
                        android:id="@+id/et_com"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/entry_hintCom"
                        android:inputType="textCapSentences"
                        android:lines="1" />

                </android.support.design.widget.TextInputLayout>

                <Spinner
                    android:id="@+id/spinner_comments"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>


            <Button
                android:id="@+id/button_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/layout_com"
                android:text="@string/entry_hintStart" />

            <Button
                android:id="@+id/button_end"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_start"
                android:text="@string/entry_hintEnd" />

            <Button
                android:id="@+id/button_go"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_end"
                android:text="@string/entry_hintGo" />

            <TextView
                android:id="@+id/et_dur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/button_end"
                android:layout_margin="@dimen/fab_margin"
                android:gravity="center_horizontal"
                android:text="@string/entry_hintGo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/et_dur"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/button_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/button_ok"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/toast_cancel" />

                <TextView
                    android:id="@+id/button_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/fab_margin"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:background="?android:attr/selectableItemBackground"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-condensed"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/entry_hintSave" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>